# lightme

./: .gitignore  main.py  pyproject.toml
app/llm/: agent.py  chat_model.py  llm_chain.py  rag_model.py  tts.py
app/llm/prompts/: agent_prompt.txt  chat_prompt.txt  rag_prompt.txt
data/: chat_history.db
data/rag_file/: 声明.txt
data/vector_db/: chroma.sqlite3
gui/: ui.py
utils/: config_handler.py  db_handler.py  file_handler.py  path_tool.py  prompt_handler.py
web/: web_py.py
web/css/: index.css
web/html/: index.html
web/js/: index.js
