[project]
name = "lightme"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.2.13",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai",
    "ntplib>=0.4.0",
    "openai>=2.29.0",
    "pyyaml>=6.0.3",
]
